emoji in chat-bar

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@ctrl/ngx-emoji-mart": "^7.0.0",
     "@nrwl/angular": "^14.4.3",
+    "angular-emojis": "^1.0.0",
     "rxjs": "~7.5.0",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
