--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^14.0.0",
     "@ctrl/ngx-emoji-mart": "^7.0.0",
     "@nrwl/angular": "^14.4.3",
+    "angular-dark-mode": "^3.0.2",
     "angular-emojis": "^1.0.0",
     "rxjs": "~7.5.0",
     "rxjs-compat": "^6.6.7",
