--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.0",
-    "@angular/common": "^14.0.0",
-    "@angular/compiler": "^14.0.0",
-    "@angular/core": "^14.0.0",
-    "@angular/forms": "^14.0.0",
-    "@angular/platform-browser": "^14.0.0",
-    "@angular/platform-browser-dynamic": "^14.0.0",
-    "@angular/router": "^14.0.0",
+    "@angular/animations": "14.1.1",
+    "@angular/common": "14.1.1",
+    "@angular/compiler": "14.1.1",
+    "@angular/core": "14.1.1",
+    "@angular/forms": "14.1.1",
+    "@angular/platform-browser": "14.1.1",
+    "@angular/platform-browser-dynamic": "14.1.1",
+    "@angular/router": "14.1.1",
     "@ctrl/ngx-emoji-mart": "^7.0.0",
-    "@nrwl/angular": "^14.4.3",
+    "@nrwl/angular": "14.5.4",
     "angular-emojis": "^1.0.0",
     "rxjs": "~7.5.0",
     "rxjs-compat": "^6.6.7",
@@ -27,16 +27,17 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.2",
+    "@angular-devkit/build-angular": "14.1.1",
     "@angular/cli": "~14.0.2",
-    "@angular/compiler-cli": "^14.0.0",
+    "@angular/compiler-cli": "14.1.1",
     "@types/jasmine": "~4.0.0",
-    "jasmine-core": "~4.1.0",
-    "karma": "~6.3.0",
+    "jasmine-core": "4.2.0",
+    "karma": "6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
+    "karma-jasmine": "5.1.0",
+    "karma-jasmine-html-reporter": "2.0.0",
     "typescript": "~4.7.2"
   }
 }
+
