--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "@angular/common": "14.1.1",
     "@angular/compiler": "14.1.1",
     "@angular/core": "14.1.1",
+    "@angular/fire": "^7.4.1",
     "@angular/forms": "14.1.1",
     "@angular/platform-browser": "14.1.1",
     "@angular/platform-browser-dynamic": "14.1.1",
     "@angular/router": "14.1.1",
     "@ctrl/ngx-emoji-mart": "^7.0.0",
-    "@nrwl/angular": "14.5.4",
     "angular-dark-mode": "^3.0.2",
-    "angular-emojis": "^1.0.0",
+    "firebase": "^9.9.2",
     "rxjs": "~7.5.0",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
@@ -41,4 +41,3 @@
     "typescript": "~4.7.2"
   }
 }
-
