--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/router": "14.1.1",
     "@ctrl/ngx-emoji-mart": "^7.0.0",
     "angular-dark-mode": "^3.0.2",
-    "firebase": "^9.9.2",
+    "firebase": "9.9.1",
     "rxjs": "~7.5.0",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
